      limitations
  c - addresses are now propagated to numa nodes
  b - correct the hostnames $PBS_NODEFILE
  b - mark the numa nodes as down if the host node goes down 
  b - fix the pbsnodes :prop functionality for numa nodes
  b - make sure the node file is updated correctly when torque updates it
  b - make the tm interface work when running as a single mom
      
2.5.2
  e - Allow the nodes file to use the syntax node[0-100] in the name to 
      create identical nodes with names node0, node1, ..., node100.
      (also node[000-100] => node000, node001, ... node100)
  b - fix support of the 'procs' functionality for qsub.
  b - remove square brackets [] from job and default stdout/stderr filenames 
      for job arrays (fixes conflict with some non-bash shells)
  n - fix build system so README.array_changes is included in tar.gz file made
      with "make dist"
  n - fix build system so contrib/pbsweb-lite-0.95.tar.gz, contrib/qpool.gz
      and contrib/README.pbstools are included the the tar.gz file made
      with "make dist"
  c - fixed crash when moving the job to a different queue (bugzilla 73)
  c - fix pbs_server crash from invalid qsub -t argument
  b - fix so blcr checkpoint jobs work correctly when put on hold
  b - fixed bugzilla #75 where pbs_server would segfault with a double free when
      calling qalter on a running job or job array.
  e - Changed free_br back to its original form and modifed copy_batchrequest
      to make a copy of the rq_extend element which will be freed in 
      free_br.
  b - fix condition where job array "template" may not get cleaned up properly 
      after a server restart
  b - fix to get new pagg ID and add additional CSA records when restarting from
      checkpoint
  e - added documentation for pbs_alterjob_async(), pbs_checkpointjob(),
      pbs_fbserver(), pbs_get_server_list() and pbs_sigjobasync().

2.5.1
  b - modified Makefile.in and Makefile.am at root to include contrib/AddPrivileges

2.5.0
