@@ -93,6 +93,7 @@
 #include <pbs_config.h>   /* the master config generated by configure */
 
 #define MAXARGS 64
+#define MAXPATH 1024
 
 int main(
 
@@ -113,6 +114,15 @@ int main(
 
   char JobID[PBS_MAXCLTJOBID];  /* modified job ID for MOM/server consumption */
   char ServerName[MAXSERVERNAME];
+
+#ifdef PENABLE_LINUX26_CPUSETS
+  char  cpuset_path[MAXPATH];
+  char  pid_str[MAXPATH];
+
+  FILE *fp;
+
+  unsigned int len;
+#endif 
 
   int  DoBackground = 0;
 
@@ -247,6 +257,35 @@ int main(
       {
       exit(-1);
       }
+
+#ifdef PENABLE_LINUX26_CPUSETS
+    /* add to cpuset */
+    snprintf(cpuset_path,sizeof(cpuset_path),
+      "/dev/cpusets/torque/%s/tasks",
+      JobID);
+
+    snprintf(pid_str,sizeof(pid_str),"%d",getpid());
+
+    fp = fopen(cpuset_path,"w");
+
+    len = strlen(pid_str);
+
+    if (fp != NULL)
+      {
+      if (fwrite(pid_str,sizeof(char),len,fp) != len)
+        {
+        fprintf(stderr,"Unable to add this process (%s) to the job's cpuset (%s)\n",
+          pid_str,
+          cpuset_path);
+
+        fclose(fp);
+        }
+      }
+    else
+      {
+      }
+
+#endif /* def PENABLE_LINUX26_CPUSETS */
 
     /* do the exec */
 
